--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script defer src="./js/main.js"></script>
     <script src="https://kit.fontawesome.com/faf15615fb.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>BMI - Calculator</title>
 </head>
 <body>
     
